Add authentication system with JWT support and update Vercel configuration

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -14,6 +14,7 @@
     }
   ],
   "env": {
-    "NODE_ENV": "production"
+    "NODE_ENV": "production",
+    "JWT_SECRET": "GymBro2024_SecureJWT_ProductionKey_9X2mK8pL4nQ7sR1vW6tY3uE5oI8aB2cD"
   }
 }
